update co-train how2do

--- a/leo/LGD_Phase1_ResNet.ipynb
+++ b/leo/LGD_Phase1_ResNet.ipynb
@@ -2171,7 +2171,125 @@
       "\n",
       "Epoch 00337: val_acc did not improve from 0.78437\n",
       "Epoch 338/3000\n",
-      "40/52 [======================>.......] - ETA: 1s - loss: 1.9327 - acc: 0.7605"
+      "52/52 [==============================] - 9s 166ms/step - loss: 1.9199 - acc: 0.7587 - val_loss: 1.3664 - val_acc: 0.6954\n",
+      "\n",
+      "Epoch 00338: val_acc did not improve from 0.78437\n",
+      "Epoch 339/3000\n",
+      "52/52 [==============================] - 9s 167ms/step - loss: 1.8869 - acc: 0.7632 - val_loss: 2.0296 - val_acc: 0.5229\n",
+      "\n",
+      "Epoch 00339: val_acc did not improve from 0.78437\n",
+      "Epoch 340/3000\n",
+      "52/52 [==============================] - 9s 167ms/step - loss: 1.9338 - acc: 0.7479 - val_loss: 1.3554 - val_acc: 0.7197\n",
+      "\n",
+      "Epoch 00340: val_acc did not improve from 0.78437\n",
+      "Epoch 341/3000\n",
+      "52/52 [==============================] - 9s 167ms/step - loss: 1.9092 - acc: 0.7491 - val_loss: 1.2951 - val_acc: 0.7305\n",
+      "\n",
+      "Epoch 00341: val_acc did not improve from 0.78437\n",
+      "Epoch 342/3000\n",
+      "52/52 [==============================] - 9s 167ms/step - loss: 1.9084 - acc: 0.7437 - val_loss: 1.5286 - val_acc: 0.6765\n",
+      "\n",
+      "Epoch 00342: val_acc did not improve from 0.78437\n",
+      "Epoch 343/3000\n",
+      "52/52 [==============================] - 9s 167ms/step - loss: 1.8889 - acc: 0.7566 - val_loss: 1.7760 - val_acc: 0.5876\n",
+      "\n",
+      "Epoch 00343: val_acc did not improve from 0.78437\n",
+      "Epoch 344/3000\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "52/52 [==============================] - 9s 167ms/step - loss: 1.9225 - acc: 0.7527 - val_loss: 1.5387 - val_acc: 0.6604\n",
+      "\n",
+      "Epoch 00344: val_acc did not improve from 0.78437\n",
+      "Epoch 345/3000\n",
+      "52/52 [==============================] - 9s 167ms/step - loss: 1.8721 - acc: 0.7635 - val_loss: 1.1735 - val_acc: 0.7466\n",
+      "\n",
+      "Epoch 00345: val_acc did not improve from 0.78437\n",
+      "Epoch 346/3000\n",
+      "52/52 [==============================] - 9s 166ms/step - loss: 1.9062 - acc: 0.7527 - val_loss: 1.5853 - val_acc: 0.6685\n",
+      "\n",
+      "Epoch 00346: val_acc did not improve from 0.78437\n",
+      "Epoch 347/3000\n",
+      "52/52 [==============================] - 9s 167ms/step - loss: 1.9140 - acc: 0.7533 - val_loss: 1.5410 - val_acc: 0.6658\n",
+      "\n",
+      "Epoch 00347: val_acc did not improve from 0.78437\n",
+      "Epoch 348/3000\n",
+      "52/52 [==============================] - 9s 167ms/step - loss: 1.8747 - acc: 0.7566 - val_loss: 1.4062 - val_acc: 0.7008\n",
+      "\n",
+      "Epoch 00348: val_acc did not improve from 0.78437\n",
+      "Epoch 349/3000\n",
+      "52/52 [==============================] - 9s 166ms/step - loss: 1.8860 - acc: 0.7575 - val_loss: 1.3570 - val_acc: 0.7062\n",
+      "\n",
+      "Epoch 00349: val_acc did not improve from 0.78437\n",
+      "Epoch 350/3000\n",
+      "52/52 [==============================] - 9s 167ms/step - loss: 1.8975 - acc: 0.7461 - val_loss: 1.2302 - val_acc: 0.7358\n",
+      "\n",
+      "Epoch 00350: val_acc did not improve from 0.78437\n",
+      "Epoch 351/3000\n",
+      "52/52 [==============================] - 9s 167ms/step - loss: 1.8896 - acc: 0.7605 - val_loss: 1.4106 - val_acc: 0.7089\n",
+      "\n",
+      "Epoch 00351: val_acc did not improve from 0.78437\n",
+      "Epoch 352/3000\n",
+      "52/52 [==============================] - 9s 167ms/step - loss: 1.8951 - acc: 0.7527 - val_loss: 1.8326 - val_acc: 0.6038\n",
+      "\n",
+      "Epoch 00352: val_acc did not improve from 0.78437\n",
+      "Epoch 353/3000\n",
+      "52/52 [==============================] - 9s 166ms/step - loss: 1.8704 - acc: 0.7599 - val_loss: 1.2223 - val_acc: 0.7466\n",
+      "\n",
+      "Epoch 00353: val_acc did not improve from 0.78437\n",
+      "Epoch 354/3000\n",
+      "52/52 [==============================] - 9s 167ms/step - loss: 1.8483 - acc: 0.7758 - val_loss: 1.4831 - val_acc: 0.6792\n",
+      "\n",
+      "Epoch 00354: val_acc did not improve from 0.78437\n",
+      "Epoch 355/3000\n",
+      "52/52 [==============================] - 9s 167ms/step - loss: 1.8671 - acc: 0.7548 - val_loss: 1.1950 - val_acc: 0.7682\n",
+      "\n",
+      "Epoch 00355: val_acc did not improve from 0.78437\n",
+      "Epoch 356/3000\n",
+      "52/52 [==============================] - 9s 167ms/step - loss: 1.8632 - acc: 0.7620 - val_loss: 1.7094 - val_acc: 0.6280\n",
+      "\n",
+      "Epoch 00356: val_acc did not improve from 0.78437\n",
+      "Epoch 357/3000\n",
+      "52/52 [==============================] - 9s 167ms/step - loss: 1.9128 - acc: 0.7557 - val_loss: 1.2252 - val_acc: 0.7547\n",
+      "\n",
+      "Epoch 00357: val_acc did not improve from 0.78437\n",
+      "Epoch 358/3000\n",
+      "52/52 [==============================] - 9s 167ms/step - loss: 1.8998 - acc: 0.7518 - val_loss: 1.7532 - val_acc: 0.6226\n",
+      "\n",
+      "Epoch 00358: val_acc did not improve from 0.78437\n",
+      "Epoch 359/3000\n",
+      "52/52 [==============================] - 9s 167ms/step - loss: 1.8982 - acc: 0.7443 - val_loss: 1.2971 - val_acc: 0.7412\n",
+      "\n",
+      "Epoch 00359: val_acc did not improve from 0.78437\n",
+      "Epoch 360/3000\n",
+      "52/52 [==============================] - 9s 167ms/step - loss: 1.8651 - acc: 0.7608 - val_loss: 1.3090 - val_acc: 0.7305\n",
+      "\n",
+      "Epoch 00360: val_acc did not improve from 0.78437\n",
+      "Epoch 361/3000\n",
+      "52/52 [==============================] - 9s 166ms/step - loss: 1.8786 - acc: 0.7608 - val_loss: 1.2693 - val_acc: 0.7224\n",
+      "\n",
+      "Epoch 00361: val_acc did not improve from 0.78437\n",
+      "Epoch 362/3000\n",
+      "52/52 [==============================] - 9s 167ms/step - loss: 1.8981 - acc: 0.7641 - val_loss: 1.4752 - val_acc: 0.6873\n",
+      "\n",
+      "Epoch 00362: val_acc did not improve from 0.78437\n",
+      "Epoch 363/3000\n",
+      "52/52 [==============================] - 9s 167ms/step - loss: 1.8608 - acc: 0.7671 - val_loss: 1.3857 - val_acc: 0.7251\n",
+      "\n",
+      "Epoch 00363: val_acc did not improve from 0.78437\n",
+      "Epoch 364/3000\n",
+      "52/52 [==============================] - 9s 167ms/step - loss: 1.8979 - acc: 0.7596 - val_loss: 1.5792 - val_acc: 0.6496\n",
+      "\n",
+      "Epoch 00364: val_acc did not improve from 0.78437\n",
+      "Epoch 365/3000\n",
+      "52/52 [==============================] - 9s 167ms/step - loss: 1.8698 - acc: 0.7581 - val_loss: 1.4988 - val_acc: 0.6631\n",
+      "\n",
+      "Epoch 00365: val_acc did not improve from 0.78437\n",
+      "Epoch 366/3000\n",
+      "21/52 [===========>..................] - ETA: 4s - loss: 1.8428 - acc: 0.7612"
      ]
     }
    ],
