update to-do of co-train

--- a/leo/LGD_Phase1_ResNet.ipynb
+++ b/leo/LGD_Phase1_ResNet.ipynb
@@ -2289,7 +2289,63 @@
       "\n",
       "Epoch 00365: val_acc did not improve from 0.78437\n",
       "Epoch 366/3000\n",
-      "21/52 [===========>..................] - ETA: 4s - loss: 1.8428 - acc: 0.7612"
+      "52/52 [==============================] - 9s 166ms/step - loss: 1.8405 - acc: 0.7668 - val_loss: 1.8383 - val_acc: 0.6307\n",
+      "\n",
+      "Epoch 00366: val_acc did not improve from 0.78437\n",
+      "Epoch 367/3000\n",
+      "52/52 [==============================] - 9s 166ms/step - loss: 1.8727 - acc: 0.7659 - val_loss: 1.3737 - val_acc: 0.7116\n",
+      "\n",
+      "Epoch 00367: val_acc did not improve from 0.78437\n",
+      "Epoch 368/3000\n",
+      "52/52 [==============================] - 9s 166ms/step - loss: 1.8766 - acc: 0.7614 - val_loss: 1.3314 - val_acc: 0.7170\n",
+      "\n",
+      "Epoch 00368: val_acc did not improve from 0.78437\n",
+      "Epoch 369/3000\n",
+      "52/52 [==============================] - 9s 166ms/step - loss: 1.8755 - acc: 0.7662 - val_loss: 1.3059 - val_acc: 0.7170\n",
+      "\n",
+      "Epoch 00369: val_acc did not improve from 0.78437\n",
+      "Epoch 370/3000\n",
+      "52/52 [==============================] - 9s 166ms/step - loss: 1.8594 - acc: 0.7590 - val_loss: 1.2743 - val_acc: 0.7466\n",
+      "\n",
+      "Epoch 00370: val_acc did not improve from 0.78437\n",
+      "Epoch 371/3000\n",
+      "52/52 [==============================] - 9s 167ms/step - loss: 1.9000 - acc: 0.7431 - val_loss: 1.4582 - val_acc: 0.6954\n",
+      "\n",
+      "Epoch 00371: val_acc did not improve from 0.78437\n",
+      "Epoch 372/3000\n",
+      "52/52 [==============================] - 9s 167ms/step - loss: 1.8837 - acc: 0.7587 - val_loss: 1.8025 - val_acc: 0.5714\n",
+      "\n",
+      "Epoch 00372: val_acc did not improve from 0.78437\n",
+      "Epoch 373/3000\n",
+      "52/52 [==============================] - 9s 167ms/step - loss: 1.8835 - acc: 0.7638 - val_loss: 1.9964 - val_acc: 0.5606\n",
+      "\n",
+      "Epoch 00373: val_acc did not improve from 0.78437\n",
+      "Epoch 374/3000\n",
+      "52/52 [==============================] - 9s 167ms/step - loss: 1.8763 - acc: 0.7623 - val_loss: 1.2459 - val_acc: 0.7385\n",
+      "\n",
+      "Epoch 00374: val_acc did not improve from 0.78437\n",
+      "Epoch 375/3000\n",
+      "52/52 [==============================] - 9s 167ms/step - loss: 1.8801 - acc: 0.7599 - val_loss: 1.6808 - val_acc: 0.6173\n",
+      "\n",
+      "Epoch 00375: val_acc did not improve from 0.78437\n",
+      "Epoch 376/3000\n",
+      "52/52 [==============================] - 9s 167ms/step - loss: 1.8806 - acc: 0.7575 - val_loss: 1.2495 - val_acc: 0.7251\n",
+      "\n",
+      "Epoch 00376: val_acc did not improve from 0.78437\n",
+      "Epoch 377/3000\n",
+      "52/52 [==============================] - 9s 167ms/step - loss: 1.8515 - acc: 0.7608 - val_loss: 1.5058 - val_acc: 0.7143\n",
+      "\n",
+      "Epoch 00377: val_acc did not improve from 0.78437\n",
+      "Epoch 378/3000\n",
+      "52/52 [==============================] - 9s 167ms/step - loss: 1.8747 - acc: 0.7659 - val_loss: 1.9892 - val_acc: 0.5418\n",
+      "\n",
+      "Epoch 00378: val_acc did not improve from 0.78437\n",
+      "Epoch 379/3000\n",
+      "52/52 [==============================] - 9s 167ms/step - loss: 1.8737 - acc: 0.7605 - val_loss: 1.5133 - val_acc: 0.6927\n",
+      "\n",
+      "Epoch 00379: val_acc did not improve from 0.78437\n",
+      "Epoch 380/3000\n",
+      "13/52 [======>.......................] - ETA: 6s - loss: 1.8433 - acc: 0.7524"
      ]
     }
    ],
