upload cotrain code

--- a/leo/LGD_Phase1_ResNet.ipynb
+++ b/leo/LGD_Phase1_ResNet.ipynb
@@ -15711,7 +15711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -15721,13 +15721,13 @@
        "       'fff37590.wav', 'fff44ac6.wav', 'fff6a13d.wav'], dtype=object)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.load('feature/mfcc7/fname_unverified.npy')"
+    "# np.load('feature/mfcc6/fname_unverified.npy')"
    ]
   }
  ],
