--- a/leo/LGD_Phase2_CoTrain.ipynb
+++ b/leo/LGD_Phase2_CoTrain.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step6"
+    "### Step6\n",
+    "* 要給其他人co-train的"
    ]
   },
   {
@@ -2765,6 +2766,555 @@
     "df_ = df_.filter(['fname','label_verified'])\n",
     "df_.to_csv('feature/'+type_+'/cotrain/Y_leo_cotrain_verified.csv',index=False) # 儲存train_Y\n",
     "df_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### step7 \n",
+    "## produce semi data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_type = 'mfcc7'\n",
+    "who = 'mow_res18'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5763, 60, 259, 1) (9400, 60, 259, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_un = np.load('feature/'+feature_type+'/X_unverified.npy')\n",
+    "Y_un = np.load('feature/'+feature_type+'/fname_unverified.npy')\n",
+    "Y_un = pd.DataFrame(Y_un,columns=['fname'])\n",
+    "X_test = np.load('feature/'+feature_type+'/X_test.npy')\n",
+    "Y_test = pd.read_csv('data/sample_submission.csv').filter(['fname'])\n",
+    "print(X_un.shape,X_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(15163, 60, 259, 1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "15163"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_semi = np.concatenate((X_un,X_test))\n",
+    "print(X_semi.shape)\n",
+    "Y_semi = Y_un.append(Y_test)\n",
+    "len(Y_semi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fname</th>\n",
+       "      <th>label_verified</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00044347.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>002d256b.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>003b91e8.wav</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>004ad66f.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0063ab88.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0075d39c.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>00780200.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0079d310.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>00ad7068.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>00c5808a.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>00c82919.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>00c9e799.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>00ce569f.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>00d1fe46.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>00d40fa2.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>00d9fa61.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>00fbb28b.wav</td>\n",
+       "      <td>20.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>00fcbab2.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>010aa387.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>0120d246.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>01235a12.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>01302128.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>013264d3.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>013c3135.wav</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>01506d76.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>015cf474.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>01638f61.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>017ea24e.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>01811e48.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>0184c390.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15133</th>\n",
+       "      <td>ff812cf5.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15134</th>\n",
+       "      <td>ff81cc5d.wav</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15135</th>\n",
+       "      <td>ff85f513.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15136</th>\n",
+       "      <td>ff8c555d.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15137</th>\n",
+       "      <td>ff8cfb2d.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15138</th>\n",
+       "      <td>ff927bb1.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15139</th>\n",
+       "      <td>ff96680f.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15140</th>\n",
+       "      <td>ff97972c.wav</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15141</th>\n",
+       "      <td>ffa502ed.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15142</th>\n",
+       "      <td>ffa69cfc.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15143</th>\n",
+       "      <td>ffaca82d.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15144</th>\n",
+       "      <td>ffae796c.wav</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15145</th>\n",
+       "      <td>ffb6eb52.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15146</th>\n",
+       "      <td>ffb6f4da.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15147</th>\n",
+       "      <td>ffb75ce0.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15148</th>\n",
+       "      <td>ffba7963.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15149</th>\n",
+       "      <td>ffbc5fb8.wav</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15150</th>\n",
+       "      <td>ffbe4fbf.wav</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15151</th>\n",
+       "      <td>ffc9555f.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15152</th>\n",
+       "      <td>ffd137a4.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15153</th>\n",
+       "      <td>ffd48624.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15154</th>\n",
+       "      <td>ffd5e900.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15155</th>\n",
+       "      <td>ffd64be4.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15156</th>\n",
+       "      <td>ffd6e84f.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15157</th>\n",
+       "      <td>ffd9d282.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15158</th>\n",
+       "      <td>ffe76321.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15159</th>\n",
+       "      <td>ffe8d42d.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15160</th>\n",
+       "      <td>ffeba2cd.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15161</th>\n",
+       "      <td>fff6d073.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15162</th>\n",
+       "      <td>fff8d22d.wav</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>15163 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              fname  label_verified\n",
+       "0      00044347.wav             NaN\n",
+       "1      002d256b.wav             NaN\n",
+       "2      003b91e8.wav             4.0\n",
+       "3      004ad66f.wav             NaN\n",
+       "4      0063ab88.wav             NaN\n",
+       "5      0075d39c.wav             NaN\n",
+       "6      00780200.wav             NaN\n",
+       "7      0079d310.wav             NaN\n",
+       "8      00ad7068.wav             NaN\n",
+       "9      00c5808a.wav             NaN\n",
+       "10     00c82919.wav             NaN\n",
+       "11     00c9e799.wav             NaN\n",
+       "12     00ce569f.wav             NaN\n",
+       "13     00d1fe46.wav             NaN\n",
+       "14     00d40fa2.wav             NaN\n",
+       "15     00d9fa61.wav             NaN\n",
+       "16     00fbb28b.wav            20.0\n",
+       "17     00fcbab2.wav             NaN\n",
+       "18     010aa387.wav             NaN\n",
+       "19     0120d246.wav             NaN\n",
+       "20     01235a12.wav             NaN\n",
+       "21     01302128.wav             NaN\n",
+       "22     013264d3.wav             NaN\n",
+       "23     013c3135.wav             7.0\n",
+       "24     01506d76.wav             NaN\n",
+       "25     015cf474.wav             NaN\n",
+       "26     01638f61.wav             NaN\n",
+       "27     017ea24e.wav             NaN\n",
+       "28     01811e48.wav             NaN\n",
+       "29     0184c390.wav             NaN\n",
+       "...             ...             ...\n",
+       "15133  ff812cf5.wav             NaN\n",
+       "15134  ff81cc5d.wav             1.0\n",
+       "15135  ff85f513.wav             NaN\n",
+       "15136  ff8c555d.wav             NaN\n",
+       "15137  ff8cfb2d.wav             NaN\n",
+       "15138  ff927bb1.wav             NaN\n",
+       "15139  ff96680f.wav             NaN\n",
+       "15140  ff97972c.wav             7.0\n",
+       "15141  ffa502ed.wav             NaN\n",
+       "15142  ffa69cfc.wav             NaN\n",
+       "15143  ffaca82d.wav             NaN\n",
+       "15144  ffae796c.wav             2.0\n",
+       "15145  ffb6eb52.wav             NaN\n",
+       "15146  ffb6f4da.wav             NaN\n",
+       "15147  ffb75ce0.wav             NaN\n",
+       "15148  ffba7963.wav             NaN\n",
+       "15149  ffbc5fb8.wav             4.0\n",
+       "15150  ffbe4fbf.wav             2.0\n",
+       "15151  ffc9555f.wav             NaN\n",
+       "15152  ffd137a4.wav             NaN\n",
+       "15153  ffd48624.wav             NaN\n",
+       "15154  ffd5e900.wav             NaN\n",
+       "15155  ffd64be4.wav             NaN\n",
+       "15156  ffd6e84f.wav             NaN\n",
+       "15157  ffd9d282.wav             NaN\n",
+       "15158  ffe76321.wav             NaN\n",
+       "15159  ffe8d42d.wav             NaN\n",
+       "15160  ffeba2cd.wav             NaN\n",
+       "15161  fff6d073.wav             NaN\n",
+       "15162  fff8d22d.wav             NaN\n",
+       "\n",
+       "[15163 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y_co = pd.read_csv(glob.glob('feature/'+feature_type+'/cotrain/**_cotrain_Y.csv')[0]) #change\n",
+    "Y_semi = pd.merge(Y_semi,Y_co,how='left',on='fname')\n",
+    "Y_semi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2375"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y_semi = Y_semi.dropna()\n",
+    "Y_co_li = Y_semi.index.tolist()\n",
+    "X_co = X_semi[Y_co_li]\n",
+    "Y_co = np.array(Y_semi['label_verified']).astype('int')\n",
+    "len(Y_co_li)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2375, 60, 259, 1) (2375,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_co.shape,Y_co.shape)\n",
+    "if not os.path.exists('feature/'+feature_type+'/semi/'+who+'/'):\n",
+    "    os.makedirs('feature/'+feature_type+'/semi/'+who+'/')\n",
+    "np.save('feature/'+feature_type+'/semi/'+who+'/X_co.npy',X_co)\n",
+    "np.save('feature/'+feature_type+'/semi/'+who+'/Y_co.npy',Y_co)\n"
    ]
   }
  ],
