--- a/leo/LGD_Phase1_ResNet.ipynb
+++ b/leo/LGD_Phase1_ResNet.ipynb
@@ -22527,7 +22527,71 @@
       "Epoch 1/3000\n",
       "89/89 [==============================] - 39s 439ms/step - loss: 1.7499 - acc: 0.7821 - val_loss: 0.8896 - val_acc: 0.8302\n",
       "\n",
-      "Epoch 00001: val_acc improved from -inf to 0.83019, saving model to model/mfcc7/LGD_fold8_co_resnet.h5\n"
+      "Epoch 00001: val_acc improved from -inf to 0.83019, saving model to model/mfcc7/LGD_fold8_co_resnet.h5\n",
+      "Epoch 2/3000\n",
+      "89/89 [==============================] - 25s 285ms/step - loss: 1.7166 - acc: 0.7916 - val_loss: 0.9244 - val_acc: 0.8167\n",
+      "\n",
+      "Epoch 00002: val_acc did not improve from 0.83019\n",
+      "Epoch 3/3000\n",
+      "89/89 [==============================] - 25s 285ms/step - loss: 1.6961 - acc: 0.7939 - val_loss: 0.9027 - val_acc: 0.8221\n",
+      "\n",
+      "Epoch 00003: val_acc did not improve from 0.83019\n",
+      "Epoch 4/3000\n",
+      "89/89 [==============================] - 25s 286ms/step - loss: 1.6885 - acc: 0.7892 - val_loss: 0.8861 - val_acc: 0.8194\n",
+      "\n",
+      "Epoch 00004: val_acc did not improve from 0.83019\n",
+      "Epoch 5/3000\n",
+      "89/89 [==============================] - 25s 286ms/step - loss: 1.6671 - acc: 0.7979 - val_loss: 0.8796 - val_acc: 0.8167\n",
+      "\n",
+      "Epoch 00005: val_acc did not improve from 0.83019\n",
+      "Epoch 6/3000\n",
+      "89/89 [==============================] - 25s 286ms/step - loss: 1.6751 - acc: 0.7956 - val_loss: 0.9096 - val_acc: 0.8113\n",
+      "\n",
+      "Epoch 00006: val_acc did not improve from 0.83019\n",
+      "Epoch 7/3000\n",
+      "89/89 [==============================] - 25s 286ms/step - loss: 1.6540 - acc: 0.8018 - val_loss: 0.9222 - val_acc: 0.8059\n",
+      "\n",
+      "Epoch 00007: val_acc did not improve from 0.83019\n",
+      "Epoch 8/3000\n",
+      "89/89 [==============================] - 25s 286ms/step - loss: 1.6660 - acc: 0.7981 - val_loss: 0.8781 - val_acc: 0.8275\n",
+      "\n",
+      "Epoch 00008: val_acc did not improve from 0.83019\n",
+      "Epoch 9/3000\n",
+      "89/89 [==============================] - 25s 286ms/step - loss: 1.6177 - acc: 0.8123 - val_loss: 0.8826 - val_acc: 0.8221\n",
+      "\n",
+      "Epoch 00009: val_acc did not improve from 0.83019\n",
+      "Epoch 10/3000\n",
+      "89/89 [==============================] - 25s 286ms/step - loss: 1.6468 - acc: 0.8037 - val_loss: 0.8744 - val_acc: 0.8194\n",
+      "\n",
+      "Epoch 00010: val_acc did not improve from 0.83019\n",
+      "Epoch 11/3000\n",
+      "89/89 [==============================] - 25s 286ms/step - loss: 1.6557 - acc: 0.7939 - val_loss: 0.8787 - val_acc: 0.8221\n",
+      "\n",
+      "Epoch 00011: val_acc did not improve from 0.83019\n",
+      "Epoch 12/3000\n",
+      "89/89 [==============================] - 26s 287ms/step - loss: 1.6543 - acc: 0.8067 - val_loss: 0.9001 - val_acc: 0.8221\n",
+      "\n",
+      "Epoch 00012: val_acc did not improve from 0.83019\n",
+      "Epoch 13/3000\n",
+      "89/89 [==============================] - 25s 286ms/step - loss: 1.6285 - acc: 0.8009 - val_loss: 0.8644 - val_acc: 0.8275\n",
+      "\n",
+      "Epoch 00013: val_acc did not improve from 0.83019\n",
+      "Epoch 14/3000\n",
+      "89/89 [==============================] - 26s 287ms/step - loss: 1.6277 - acc: 0.8092 - val_loss: 0.8892 - val_acc: 0.8248\n",
+      "\n",
+      "Epoch 00014: val_acc did not improve from 0.83019\n",
+      "Epoch 15/3000\n",
+      "89/89 [==============================] - 25s 286ms/step - loss: 1.6333 - acc: 0.8041 - val_loss: 0.8966 - val_acc: 0.8113\n",
+      "\n",
+      "Epoch 00015: val_acc did not improve from 0.83019\n",
+      "Epoch 16/3000\n",
+      "89/89 [==============================] - 25s 286ms/step - loss: 1.6375 - acc: 0.8062 - val_loss: 0.8672 - val_acc: 0.8248\n",
+      "\n",
+      "Epoch 00016: ReduceLROnPlateau reducing learning rate to 4.999999873689376e-05.\n",
+      "\n",
+      "Epoch 00016: val_acc did not improve from 0.83019\n",
+      "Epoch 17/3000\n",
+      "18/89 [=====>........................] - ETA: 19s - loss: 1.6590 - acc: 0.7882"
      ]
     }
    ],
