update model keep policy

--- a/leo/LGD_Phase1_ResNet.ipynb
+++ b/leo/LGD_Phase1_ResNet.ipynb
@@ -22591,7 +22591,43 @@
       "\n",
       "Epoch 00016: val_acc did not improve from 0.83019\n",
       "Epoch 17/3000\n",
-      "18/89 [=====>........................] - ETA: 19s - loss: 1.6590 - acc: 0.7882"
+      "89/89 [==============================] - 25s 286ms/step - loss: 1.6247 - acc: 0.7985 - val_loss: 0.8689 - val_acc: 0.8221\n",
+      "\n",
+      "Epoch 00017: val_acc did not improve from 0.83019\n",
+      "Epoch 18/3000\n",
+      "89/89 [==============================] - 25s 286ms/step - loss: 1.6090 - acc: 0.8092 - val_loss: 0.8727 - val_acc: 0.8194\n",
+      "\n",
+      "Epoch 00018: val_acc did not improve from 0.83019\n",
+      "Epoch 19/3000\n",
+      "89/89 [==============================] - 25s 286ms/step - loss: 1.6282 - acc: 0.7942 - val_loss: 0.8604 - val_acc: 0.8275\n",
+      "\n",
+      "Epoch 00019: val_acc did not improve from 0.83019\n",
+      "Epoch 20/3000\n",
+      "89/89 [==============================] - 26s 287ms/step - loss: 1.6083 - acc: 0.8129 - val_loss: 0.8638 - val_acc: 0.8221\n",
+      "\n",
+      "Epoch 00020: val_acc did not improve from 0.83019\n",
+      "Epoch 21/3000\n",
+      "89/89 [==============================] - 25s 286ms/step - loss: 1.6103 - acc: 0.8027 - val_loss: 0.8677 - val_acc: 0.8113\n",
+      "\n",
+      "Epoch 00021: val_acc did not improve from 0.83019\n",
+      "Epoch 22/3000\n",
+      "89/89 [==============================] - 25s 286ms/step - loss: 1.6150 - acc: 0.8004 - val_loss: 0.8554 - val_acc: 0.8275\n",
+      "\n",
+      "Epoch 00022: val_acc did not improve from 0.83019\n",
+      "Epoch 23/3000\n",
+      "89/89 [==============================] - 26s 287ms/step - loss: 1.5806 - acc: 0.8125 - val_loss: 0.8534 - val_acc: 0.8194\n",
+      "\n",
+      "Epoch 00023: val_acc did not improve from 0.83019\n",
+      "Epoch 24/3000\n",
+      "89/89 [==============================] - 26s 287ms/step - loss: 1.6260 - acc: 0.8057 - val_loss: 0.8471 - val_acc: 0.8248\n",
+      "\n",
+      "Epoch 00024: val_acc did not improve from 0.83019\n",
+      "Epoch 25/3000\n",
+      "89/89 [==============================] - 26s 287ms/step - loss: 1.6002 - acc: 0.8079 - val_loss: 0.8666 - val_acc: 0.8194\n",
+      "\n",
+      "Epoch 00025: val_acc did not improve from 0.83019\n",
+      "Epoch 26/3000\n",
+      "55/89 [=================>............] - ETA: 9s - loss: 1.6258 - acc: 0.7932"
      ]
     }
    ],
@@ -22615,7 +22651,8 @@
     "# 2=>0.87062\n",
     "# 3=>0.88949\n",
     "# 4=>0.82749\n",
-    "# 5=>0.84367"
+    "# 5=>0.84367\n",
+    "# 6=>0.84906(X)"
    ]
   },
   {
