update co-train self-train stackin

--- a/leo/LGD_Phase2_CoTrain.ipynb
+++ b/leo/LGD_Phase2_CoTrain.ipynb
@@ -2780,22 +2780,23 @@
    "metadata": {},
    "source": [
     "### step7 \n",
-    "## produce semi data"
+    "## produce semi data\n",
+    "* 給自己co-train的"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature_type = 'mfcc7'\n",
-    "who = 'mow_res18'"
+    "feature_type = 'mfcc6'\n",
+    "who = 'mike_mfcc1_resnet18_cotrain_Y'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -2804,7 +2805,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5763, 60, 259, 1) (9400, 60, 259, 1)\n"
+      "(5763, 64, 431, 1) (9400, 64, 431, 1)\n"
      ]
     }
    ],
@@ -2819,7 +2820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -2828,7 +2829,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(15163, 60, 259, 1)\n"
+      "(15163, 64, 431, 1)\n"
      ]
     },
     {
@@ -2837,7 +2838,7 @@
        "15163"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2851,7 +2852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -2940,12 +2941,12 @@
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>00c9e799.wav</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>15.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>00ce569f.wav</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -2965,7 +2966,7 @@
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>00fbb28b.wav</td>\n",
-       "      <td>20.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
@@ -3050,12 +3051,12 @@
        "    <tr>\n",
        "      <th>15135</th>\n",
        "      <td>ff85f513.wav</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>21.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15136</th>\n",
        "      <td>ff8c555d.wav</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>6.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15137</th>\n",
@@ -3065,7 +3066,7 @@
        "    <tr>\n",
        "      <th>15138</th>\n",
        "      <td>ff927bb1.wav</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15139</th>\n",
@@ -3115,7 +3116,7 @@
        "    <tr>\n",
        "      <th>15148</th>\n",
        "      <td>ffba7963.wav</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15149</th>\n",
@@ -3135,7 +3136,7 @@
        "    <tr>\n",
        "      <th>15152</th>\n",
        "      <td>ffd137a4.wav</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>38.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15153</th>\n",
@@ -3205,12 +3206,12 @@
        "8      00ad7068.wav             NaN\n",
        "9      00c5808a.wav             NaN\n",
        "10     00c82919.wav             NaN\n",
-       "11     00c9e799.wav             NaN\n",
-       "12     00ce569f.wav             NaN\n",
+       "11     00c9e799.wav            15.0\n",
+       "12     00ce569f.wav             0.0\n",
        "13     00d1fe46.wav             NaN\n",
        "14     00d40fa2.wav             NaN\n",
        "15     00d9fa61.wav             NaN\n",
-       "16     00fbb28b.wav            20.0\n",
+       "16     00fbb28b.wav             NaN\n",
        "17     00fcbab2.wav             NaN\n",
        "18     010aa387.wav             NaN\n",
        "19     0120d246.wav             NaN\n",
@@ -3227,10 +3228,10 @@
        "...             ...             ...\n",
        "15133  ff812cf5.wav             NaN\n",
        "15134  ff81cc5d.wav             1.0\n",
-       "15135  ff85f513.wav             NaN\n",
-       "15136  ff8c555d.wav             NaN\n",
+       "15135  ff85f513.wav            21.0\n",
+       "15136  ff8c555d.wav             6.0\n",
        "15137  ff8cfb2d.wav             NaN\n",
-       "15138  ff927bb1.wav             NaN\n",
+       "15138  ff927bb1.wav             7.0\n",
        "15139  ff96680f.wav             NaN\n",
        "15140  ff97972c.wav             7.0\n",
        "15141  ffa502ed.wav             NaN\n",
@@ -3240,11 +3241,11 @@
        "15145  ffb6eb52.wav             NaN\n",
        "15146  ffb6f4da.wav             NaN\n",
        "15147  ffb75ce0.wav             NaN\n",
-       "15148  ffba7963.wav             NaN\n",
+       "15148  ffba7963.wav             7.0\n",
        "15149  ffbc5fb8.wav             4.0\n",
        "15150  ffbe4fbf.wav             2.0\n",
        "15151  ffc9555f.wav             NaN\n",
-       "15152  ffd137a4.wav             NaN\n",
+       "15152  ffd137a4.wav            38.0\n",
        "15153  ffd48624.wav             NaN\n",
        "15154  ffd5e900.wav             NaN\n",
        "15155  ffd64be4.wav             NaN\n",
@@ -3259,20 +3260,20 @@
        "[15163 rows x 2 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Y_co = pd.read_csv(glob.glob('feature/'+feature_type+'/cotrain/**_cotrain_Y.csv')[0]) #change\n",
+    "Y_co = pd.read_csv(glob.glob('feature/'+feature_type+'/cotrain/'+who+'.csv')[0]) #change如果有第二個的話要改\n",
     "Y_semi = pd.merge(Y_semi,Y_co,how='left',on='fname')\n",
     "Y_semi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -3280,10 +3281,10 @@
     {
      "data": {
       "text/plain": [
-       "2375"
+       "2911"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3298,14 +3299,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2375, 60, 259, 1) (2375,)\n"
+      "(2911, 64, 431, 1) (2911,)\n"
      ]
     }
    ],
