update upload self train folder

--- a/leo/LGD_Phase1_ResNet.ipynb
+++ b/leo/LGD_Phase1_ResNet.ipynb
@@ -18267,7 +18267,15 @@
       "\n",
       "Epoch 00118: val_acc did not improve from 0.88949\n",
       "Epoch 119/3000\n",
-      " 81/195 [===========>..................] - ETA: 26s - loss: 1.1777 - acc: 0.8580"
+      "195/195 [==============================] - 46s 238ms/step - loss: 1.1665 - acc: 0.8593 - val_loss: 0.7060 - val_acc: 0.8814\n",
+      "\n",
+      "Epoch 00119: val_acc did not improve from 0.88949\n",
+      "Epoch 120/3000\n",
+      "195/195 [==============================] - 46s 238ms/step - loss: 1.1541 - acc: 0.8619 - val_loss: 0.7147 - val_acc: 0.8760\n",
+      "\n",
+      "Epoch 00120: val_acc did not improve from 0.88949\n",
+      "Epoch 121/3000\n",
+      "194/195 [============================>.] - ETA: 0s - loss: 1.1530 - acc: 0.8636"
      ]
     }
    ],
