--- a/leo/LGD_Phase1_ResNet.ipynb
+++ b/leo/LGD_Phase1_ResNet.ipynb
@@ -18275,7 +18275,39 @@
       "\n",
       "Epoch 00120: val_acc did not improve from 0.88949\n",
       "Epoch 121/3000\n",
-      "194/195 [============================>.] - ETA: 0s - loss: 1.1530 - acc: 0.8636"
+      "195/195 [==============================] - 47s 239ms/step - loss: 1.1531 - acc: 0.8633 - val_loss: 0.7168 - val_acc: 0.8787\n",
+      "\n",
+      "Epoch 00121: val_acc did not improve from 0.88949\n",
+      "Epoch 122/3000\n",
+      "195/195 [==============================] - 46s 238ms/step - loss: 1.1562 - acc: 0.8619 - val_loss: 0.7058 - val_acc: 0.8868\n",
+      "\n",
+      "Epoch 00122: val_acc did not improve from 0.88949\n",
+      "Epoch 123/3000\n",
+      "195/195 [==============================] - 46s 238ms/step - loss: 1.1530 - acc: 0.8543 - val_loss: 0.7036 - val_acc: 0.8841\n",
+      "\n",
+      "Epoch 00123: val_acc did not improve from 0.88949\n",
+      "Epoch 124/3000\n",
+      "195/195 [==============================] - 46s 238ms/step - loss: 1.1456 - acc: 0.8604 - val_loss: 0.7039 - val_acc: 0.8841\n",
+      "\n",
+      "Epoch 00124: val_acc did not improve from 0.88949\n",
+      "Epoch 125/3000\n",
+      "195/195 [==============================] - 46s 238ms/step - loss: 1.1538 - acc: 0.8638 - val_loss: 0.7133 - val_acc: 0.8733\n",
+      "\n",
+      "Epoch 00125: ReduceLROnPlateau reducing learning rate to 2.499999936844688e-05.\n",
+      "\n",
+      "Epoch 00125: val_acc did not improve from 0.88949\n",
+      "Epoch 126/3000\n",
+      "195/195 [==============================] - 46s 238ms/step - loss: 1.1359 - acc: 0.8681 - val_loss: 0.7242 - val_acc: 0.8841\n",
+      "\n",
+      "Epoch 00126: val_acc did not improve from 0.88949\n",
+      "Epoch 127/3000\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 31/195 [===>..........................] - ETA: 38s - loss: 1.1435 - acc: 0.8604"
      ]
     }
    ],
